# hr_assistant

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
backend/src/hr_assistant_backend/: __init__.py  main.py
backend/src/hr_assistant_backend/api/: assets.py  assistant.py  auth.py  dependencies.py  routes.py
backend/src/hr_assistant_backend/core/: config.py  database.py  security.py
backend/src/hr_assistant_backend/models/: __init__.py  asset.py  user.py
backend/src/hr_assistant_backend/schemas/: __init__.py  asset.py  assistant.py  auth.py  user.py
backend/src/hr_assistant_backend/services/: assistant.py
backend/tests/: test_api.py  test_config.py  test_infra_compose.py
docs/: backend-detailed-design.md  current-session-overview.md  project-overview.md  schema-proposal.md
docs/tasks/: README.md  task-001-db-bootstrap.md  task-002-user-admin-api.md  task-003-assets-and-rentals.md  task-004-policy-documents-rag.md  task-005-assistant-workflow.md  task-006-observability-and-evals.md  task-007-backend-hardening.md
frontend/: .dockerignore  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/login/: page.tsx
frontend/src/lib/: auth.ts
frontend/src/lib/validations/: login.ts  signup.ts
infra/: .env.example  README.md  docker-compose.yml
infra/scripts/: 001_extensions.sql  002_schema.sql  003_seed_admin.sh
